# openaec-installer

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/superpowers/specs/: 2026-07-20-webtool-tabs-design.md
src/: App.css  App.tsx  main.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: github.rs  installer.rs  lib.rs  linux.rs  main.rs  registry.rs
src/components/: CategoryIcon.tsx  OpenAecLogo.tsx  SelfUpdateBanner.css  SelfUpdateBanner.tsx  StatusBar.tsx  TabBar.css  TabBar.tsx  TitleBar.tsx  ToolCard.css  ToolCard.tsx  WebToolView.css  WebToolView.tsx
src/components/settings/: SettingsDialog.tsx
src/data/: catalog.ts
src/i18n/: config.ts
src/i18n/locales/en/: common.json  settings.json
src/i18n/locales/nl/: common.json  settings.json
src/lib/: api.ts  status.ts  tabs.test.ts  tabs.ts
